# stock-project

./: API_DOCUMENTATION.md  CRON_JOBS_README.md  DEPLOYMENT_STATUS.md  README.md  README_DEPLOYMENT.md  RENDER_DEPLOYMENT.md  RENDER_TROUBLESHOOTING.md  api_server.py  backtest_results.csv  backtester.py  build.sh  data_fetcher.py  debug_stock_data.py  deploy_to_render.sh  email_sender.py  eod_evaluator.py  evening_evaluation.py  main.py  morning_prediction.py  news_analyzer.py  pyproject.toml  recommender.py  render.yaml  requirements.txt  requirements_minimal.txt  requirements_stable.txt  requirements_super_minimal.txt  setup_cron_jobs.sh  start_api.sh  technical_analyzer.py  test_api.py  test_data_processing.py  test_deployment.py  test_fallback_data.py  test_full_prediction.py  test_logging.py  test_railway_fix.py  test_simplified_prediction.py  token.pickle
evaluations/: evaluations_20250726.json
predictions/: predictions_20250726.json
