[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-prediction-api"
version = "1.0.0"
description = "Stock Prediction API with Flask"
requires-python = ">=3.11,<3.12"
dependencies = [
    "Flask==2.2.5",
    "Flask-CORS==4.0.0",
    "gunicorn==20.1.0",
    "yfinance==0.2.18",
    "pandas==1.5.3",
    "numpy==1.24.3",
    "requests==2.28.2",
    "openai==0.27.8",
    "google-auth==2.17.3",
    "google-api-python-client==2.86.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"] 